--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Git Tutorial</title>
 </head>
 <body>
+    <h1>Git Tutorial</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae, repellendus iusto? Vel 
+        tempora laboriosam id dicta earum omnis tenetur,<br> eveniet excepturi, sint nemo laudantium
+         totam aspernatur repellendus,
+         soluta at iste.</p>
     
 </body>
 </html>
