--- a/index.html
+++ b/index.html
@@ -4,14 +4,121 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git Tutorial</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <title>Profile</title>
 </head>
 <body>
-    <h1>Git Tutorial</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae, repellendus iusto? Vel 
-        tempora laboriosam id dicta earum omnis tenetur,<br> eveniet excepturi, sint nemo laudantium
-         totam aspernatur repellendus,
-         soluta at iste.</p>
-    
+    <i class="bi bi-person-square"></i>
+    <div id= "body">
+    <h4>HELLO,</h3>
+    <h4>MY NAME IS UDEME EKO AND I AM A WEB DEVELOPER</h4>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+                <h5>#ABOUT ME</h5>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae, repellendus iusto? Vel 
+                   tempora laboriosam id dicta earum omnis tenetur,<br> eveniet excepturi, sint nemo laudantium
+                   totam aspernatur repellendus,
+                   soluta at iste.</p>
+                   <br>
+                   <br>
+                   <br>
+                   <br>
+                <h5>#EDUCATION & EXPERIENCE</h5>
+                <div id="education">
+                <p>  2004- Hope Power Nursery and Primary School</p>
+                <p>  2003- Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia eius recusandae</p>
+                <p>  2010- Federal Government Girls' College, IOI</p>
+                <p>  2011- Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia eius recusandae</p>
+                <p>  2018- Federal University of Technology, Owerri FUTO</p>
+                <p>  2019- Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia eius recusandae</p>
+                <p>  2021- Software Development Training, KSC</p> </div>
+                <br>
+                <h5>#SERVICES</h5>
+                <div id="green"><p>HTML/CSS Website Design</p></div>
+                <div id="blue"><p>Web Programming (PHP, Rails, Python)</p></div>
+                <div id="green"><p>Server and Database Administrator</p></div>
+                <div id="blue"><p>Server and Database Administrator</p></div>
+                <div id="green"><p>Server and Database Administrator</p></div>
+               
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+                <h5>#CONTACT INFO</h5>
+                <p> <i class="bi bi-telephone"></i>  07030448700</p>
+                <p><i class="bi bi-envelope-fill"></i>  ekoudeme@gmail.com</p>
+                <p><a href="https://www.facebook.com/udeme.eko" class="facebook"><i class="bi bi-facebook"></i>  Facebook</a</p> 
+                <p><a href="https://twitter.com/yudizfoods?s=08" class="twitter"><i class="bi bi-twitter"></i>  Twitter</a></p>
+                <br>
+                <h5>#PROGRAMMING SKILLS</h5>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">HTML/CSS</div>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 98%" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100">JavaScript</div>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">PHP & MYSQL</div>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 92%" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100">PHP & MYSQL</div>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">Ruby on Rails</div>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">ActionScript & Flash</div>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Python</div>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">Java</div>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">C#</div>
+                  </div>
+                  <br>
+                 <h5>#RECENT PROJECTS</h5> 
+                 <p><i class="bi bi-slack">  LOGOTYPE</i></p>
+                 <p><i class="bi bi-cart4">  LOGOTYPE</i></p>
+                 <p><i class="bi bi-vimeo">  LOGOTYPE</i></p>
+                 <p><i class="bi bi-wordpress">  LogoType</i></p>
+                 <p><i class="bi bi-boxes">  logotype</i></p>
+            </div>
+          </div>
+        </div>
+    </div>
 </body>
 </html>
